[package]
name = "ark-ivls"
version = "0.1.0"
authors = [
    "Weikeng Chen",
    "Alessandro Chiesa",
    "Emma Dauterman",
    "Nicholas Ward"
]
description = "A library for decentralized private computation"
repository = "https://github.com/scipr/zexe"
keywords = ["zero knowledge", "cryptography", "smart contracts", "cryptocurrency"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "tests", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = [ "derive" ] }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }

ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }

ark-relations = { git = "https://github.com/arkworks-rs/snark", default-features = false }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives", branch = "main", default-features = false, features = [ "r1cs" ] }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", default-features = false  }
ark-nonnative-field = { git = "https://github.com/arkworks-rs/nonnative", default-features = false  }

ark-ed-on-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "r1cs" ] }
ark-snark = { git = "https://github.com/arkworks-rs/snark", default-features = false }
ark-pcd = { git = "https://github.com/arkworks-rs/pcd", default-features = false }

rand_chacha = { version = "0.2.1", default-features = false }
rand = { version = "0.7", default-features = false  }
derivative = { version = "2.0", features = ["use_core"] }

tracing-subscriber = { version = "0.2", default-features = false, optional = true }

ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", default-features = false, features = [ "r1cs" ] }
ark-gm17 = { git = "https://github.com/arkworks-rs/gm17", default-features = false, features = [ "r1cs" ] }
ark-marlin = { git = "https://github.com/arkworks-rs/marlin", branch = "constraints", default-features = false }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit", branch = "constraints", default-features = false, features = [ "r1cs" ] }

[dev-dependencies]
tracing = { version = "0.1", default-features = false }
ark-ed-on-mnt4-298 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "r1cs" ] }
ark-ed-on-mnt4-753 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "r1cs" ] }
ark-mnt4-298 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "r1cs" ] }
ark-mnt6-298 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "r1cs" ] }
ark-mnt4-753 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "curve", "r1cs" ] }
ark-mnt6-753 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "r1cs" ] }

###############################################################################

################################## Features ###################################

[features]
default = ["std"]
std = [ "ark-ff/std", "tracing-subscriber", "ark-ec/std", "ark-poly/std", "ark-std/std", "ark-serialize/std", "ark-poly-commit/std", "ark-marlin/std", "ark-crypto-primitives/std", "ark-r1cs-std/std", "ark-nonnative-field/std", "ark-groth16/std", "ark-gm17/std", "ark-relations/std", "ark-pcd/std"]
print-trace = [ "ark-std/print-trace" ]

###############################################################################

# Copied from Zexe
[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

